# iced-greet

./: Cargo.toml  LICENSE  README.md
src/: greeter.rs  main.rs  test.rs
src/query/: cmd.rs  mod.rs  sessions.rs  users.rs
src/ui/: mod.rs  update.rs  view.rs  window.rs
src/ui/widgets/: mod.rs  pick_input.rs
